--- a/source/theme.yaml
+++ b/source/theme.yaml
@@ -1,14 +1,10 @@
-ThemeApiVersion: 2.5.0
-Id: 8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1
-Name: Helium
-Author: darklinkpower
-Version: 1.53
+ThemeApiVersion: 2.6.0
+Id: Lithium_c2635228-430a-4ef0-9a0f-0219e1e1c53c
+Name: Lithium
+Author: Liam Scholte
+Version: 1.0.0
 Links:
 - Name: GitHub
-  Url: https://github.com/darklinkpower/Helium
+  Url: https://github.com/lscholte/Lithium
 - Name: Issues Tracker
-  Url: https://github.com/darklinkpower/Helium/issues
-- Name: Support (Discord)
-  Url: https://discord.com/channels/365863063296933888/808419347105447957
-- Name: Ko-fi (Tips and Donations)
-  Url: https://ko-fi.com/darklinkpower
+  Url: https://github.com/lscholte/Lithium/issues
