--- a/manifests/Installer_Manifest.yaml
+++ b/manifests/Installer_Manifest.yaml
@@ -3,16 +3,24 @@ Packages:
   - Version: 1.0.0
     RequiredApiVersion: 2.6.0
     ReleaseDate: 2024-01-18
-    PackageUrl: https://github.com/lscholte/Lithium/releases/download/1.0/Lithium_c2635228-430a-4ef0-9a0f-0219e1e1c53c_1_0_0.pthm
+    PackageUrl: https://github.com/lscholte/Lithium/releases/download/v1.0.0/Lithium_c2635228-430a-4ef0-9a0f-0219e1e1c53c_1_0_0.pthm
     Changelog:
       - Forked from Helium theme
       - Modified grid view hover buttons to be more visible
   - Version: 1.0.1
     RequiredApiVersion: 2.6.0
     ReleaseDate: 2024-01-19
-    PackageUrl: https://github.com/lscholte/Lithium/releases/download/1.0/Lithium_c2635228-430a-4ef0-9a0f-0219e1e1c53c_1_0_1.pthm
+    PackageUrl: https://github.com/lscholte/Lithium/releases/download/v1.0.1/Lithium_c2635228-430a-4ef0-9a0f-0219e1e1c53c_1_0_1.pthm
     Changelog:
       - Restyles grid view zoom slider
       - Menu item mouse hover highlighting effect takes full width of the menu item
       - Checkmark for menu item remains visible when hovering mouse over the menu item
       - Removes shine animation when hovering mouse over a game in grid view
+  - Version: 1.0.2
+    RequiredApiVersion: 2.6.0
+    ReleaseDate: 2024-01-20
+    PackageUrl: https://github.com/lscholte/Lithium/releases/download/v1.0.2/Lithium_c2635228-430a-4ef0-9a0f-0219e1e1c53c_1_0_2.pthm
+    Changelog:
+      - Removes menu item separator margin
+      - Restyles grid view game borders
+      - Restyles grid view game hover buttons
